--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -722,7 +722,7 @@ body#playground {
 }
 
 .container-play {
-    background-image: url("../images/dogs-img.png");
+    background-image: url(../images/dogs-img.png);
     width: 100%;
     height: 100%;
     position: relative;
@@ -731,8 +731,8 @@ body#playground {
     background-repeat: no-repeat;
     grid-area: img1;
     display: grid;
-    grid-template-columns: 25% auto 26%;
-    grid-template-rows: auto 20% 10%;
+    grid-template-columns: 31% auto 31%;
+    grid-template-rows: auto 23% 20%;
     grid-template-areas:
         "empty1 photo empty2"
         "empty3 text empty4"
@@ -1401,6 +1401,9 @@ div.bar-container {
         width: 70%;
         border: 25px solid white;
     }
+    .container-play {
+        grid-template-columns: 15% auto 15%;
+    }
 }
 
 @media screen and (min-width: 700px) and (max-width: 900px) {
@@ -1539,9 +1542,8 @@ div.bar-container {
     }
 
     .container-play p {
-        font-size: 1em;
-        grid-template-columns: 73%;
-        top: 70%;
+        font-size: 1.1em;
+        grid-template-columns: 15% auto 15%;
     }
 
     .p-reason div {
@@ -1724,11 +1726,14 @@ div.bar-container {
     }
 
     .container-play p {
-        font-size: 1em;
+        font-size: 1.4em;
     }
 
     .p-reason div {
         font-size: 1em;
+    }
+    div.container-play {
+        grid-template-columns: 15% auto 15%;
     }
 }
 
@@ -1838,7 +1843,8 @@ div.bar-container {
     }
 
     .container-play p {
-        font-size: 2em;
+        font-size: 1.6em;
+        grid-template-columns: 15% auto 15%;
     }
 }
 
@@ -1862,7 +1868,12 @@ div.bar-container {
     div.topnav {
         display: none;
     }
+    
+.container-play {
+    grid-template-columns: 15% auto 15%;
 }
+}
+
 
 @media (min-width: 1850px) and (max-width: 2560px) {
 
