--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,14 +21,11 @@ body {
     background-color: beige;
     background-position: center center;
     background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
     background-attachment: fixed;
     height: 100vh;
     max-width: 100%;
-    font-family: Hubballi, sans-serif;
+    font-family: 'Hubballi', sans-serif;
     font-weight: 200;
     margin: 0;
     padding: 0;
@@ -60,12 +57,12 @@ body#pool-body {
 
 #logo {
     font-size: 3rem;
-    font-family: Playfair Display SC, sans-serif;
+    font-family: 'Playfair Display SC', sans-serif;
     font-weight: 700;
-
     letter-spacing: 5px;
     color: black;
     margin-left: 10px;
+    display: contents;
 }
 
 /* Nav bar */
@@ -80,7 +77,7 @@ body#pool-body {
 
 #menu {
     list-style-type: none;
-    font-family: Hubballi, sans-serif;
+    font-family: 'Hubballi', sans-serif;
     font-size: 1.5rem;
     letter-spacing: 4px;
     display: inline-grid;
@@ -120,7 +117,7 @@ li a:hover {
 
 #logo-mobile {
     font-size: 1.1em;
-    font-family: Playfair Display SC, sans-serif;
+    font-family: 'Playfair Display SC', sans-serif;
     letter-spacing: 5px;
     color: black;
 }
@@ -215,7 +212,7 @@ div.topnav {
 #gym-title,
 #bar-title {
     text-align: center;
-    font-family: Playfair Display SC, sans-serif;
+    font-family: 'Playfair Display SC', sans-serif;
     font-size: 1.5em;
     letter-spacing: 4px;
     margin-bottom: 2%;
@@ -315,7 +312,7 @@ footer {
     text-align: end;
     padding: 20px 0 20px 0;
     width: 100%;
-    font-family: Hubballi, sans-serif;
+    font-family: 'Hubballi', sans-serif;
 
     color: black;
     font-size: 1rem;
@@ -328,7 +325,7 @@ footer {
 .intro-text-box1 {
     color: #5f0f40;
     font-size: 2.5rem;
-    font-family: Playfair Display SC, sans-serif;
+    font-family: 'Playfair Display SC', sans-serif;
     font-weight: 400;
     grid-area: text;
     letter-spacing: 7px;
@@ -340,7 +337,7 @@ footer {
 .playground-title {
     text-align: center;
     background-color: #90BEC0;
-    font-family: Playfair Display SC, sans-serif;
+    font-family: 'Playfair Display SC', sans-serif;
     font-weight: 400;
     font-size: 1.9em;
     letter-spacing: 4px;
@@ -350,7 +347,7 @@ footer {
 }
 
 .pool-info {
-    font-family: Hubballi, sans-serif;
+    font-family: 'Hubballi', sans-serif;
     color: rgb(114, 111, 109);
     font-size: 1.2em;
     letter-spacing: 1px;
@@ -412,7 +409,7 @@ table.time-table tr,
 .time-table th,
 .classes-table th {
     padding: 12px 14px;
-    font-family: Playfair Display SC, sans-serif;
+    font-family: 'Playfair Display SC', sans-serif;
     font-weight: 400;
     border: solid 1px black;
 }
@@ -467,7 +464,7 @@ p.staff-d {
     letter-spacing: 3px;
     grid-area: t;
     padding: 10px 0 10px 0;
-    font-family: Playfair Display SC, sans-serif;
+    font-family: 'Playfair Display SC', sans-serif;
     font-weight: 400;
 }
 
@@ -493,7 +490,7 @@ div.container-s {
     font-size: 1.1rem;
     letter-spacing: 3px;
     background-color: white;
-    font-family: Playfair Display SC, sans-serif;
+    font-family: 'Playfair Display SC', sans-serif;
     border: 1px solid black;
     border-top-right-radius: 20px;
 }
@@ -621,7 +618,7 @@ label {
     border: 2px solid black;
     border-radius: 25px;
     color: black;
-    font-family: Playfair Display SC, sans-serif;
+    font-family: 'Playfair Display SC', sans-serif;
     padding: 5px 10px;
     text-align: center;
     display: inline-block;
@@ -657,7 +654,7 @@ input {
 }
 
 #form-title {
-    font-family: Playfair Display SC, sans-serif;
+    font-family: 'Playfair Display SC', sans-serif;
     font-size: 1.1em;
     color: black;
     font-weight: bold;
@@ -666,7 +663,7 @@ input {
 
 label {
     margin: 0 0 20px;
-    font-family: Playfair Display SC, sans-serif;
+    font-family: 'Playfair Display SC', sans-serif;
     font-size: .9em;
 
 }
@@ -684,12 +681,12 @@ label {
 }
 
 option {
-    font-family: Playfair Display SC, sans-serif;
+    font-family: 'Playfair Display SC', sans-serif;
 
 }
 
 .btn {
-    font-family: Playfair Display SC, sans-serif;
+    font-family: 'Playfair Display SC', sans-serif;
     font-size: .9em;
     border: 1px solid black;
     border-radius: 2px;
@@ -807,7 +804,7 @@ img.bench {
     font-size: 1.1em;
     background-color: #90BEC0;
     display: inline;
-    font-family: Playfair Display SC;
+    font-family: 'Playfair Display SC', sans-serif;
     font-weight: 400;
     margin: 20px;
     border: 1px solid black;
@@ -864,11 +861,12 @@ body#gym {
     border-radius: 2%;
     margin: 20px;
     padding: 15px;
-    font-family: 'Playfair Display SC';
+    font-family: 'Playfair Display SC', sans-serif;
     border: 1px solid;
     text-align: center;
     position: relative;
 }
+
 .gym-grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -960,7 +958,7 @@ body#bar {
 }
 
 .menu-title {
-    font-family: Playfair Display SC, sans-serif;
+    font-family: 'Playfair Display SC', sans-serif;
 }
 
 .dog-left {
@@ -978,7 +976,7 @@ body#bar {
     grid-template-columns: 62%;
     justify-content: center;
     text-align: left;
-    font-family: Hubballi, sans-serif;
+    font-family: 'Hubballi', sans-serif;
     font-size: 1.7em;
     top: 520px;
 }
@@ -998,7 +996,7 @@ body#bar {
     grid-template-columns: 68%;
     justify-content: center;
     text-align: left;
-    font-family: Hubballi, sans-serif;
+    font-family: 'Hubballi', sans-serif;
     font-size: 1.7em;
     top: 490px;
 }
@@ -1048,8 +1046,8 @@ body#bar {
     .staff-k,
     .staff-d {
         font-size: 1em;
-    border-radius: 1%;
-    padding: 15px;
+        border-radius: 1%;
+        padding: 15px;
     }
 
     img.corinne {
@@ -1069,8 +1067,9 @@ body#bar {
 
     .staff-header {
         font-size: 1em;
-    grid-area: t;
+        grid-area: t;
     }
+
     #name {
         font-size: 1em;
     }
@@ -1174,9 +1173,9 @@ body#bar {
     }
 
     .p-reason {
-       
-    flex-wrap: wrap;
-    margin: 20px;
+
+        flex-wrap: wrap;
+        margin: 20px;
 
     }
 
@@ -1250,11 +1249,13 @@ body#bar {
             "dog"
             "foot";
     }
+
     .questions p {
 
         font-size: 1em;
-       
+
     }
+
     .container-play {
         background-image: url("../images/pitbull-img.png");
         width: 100%;
@@ -1272,6 +1273,7 @@ body#bar {
             "empty3 text empty4"
             "empty5 empty6 empty7";
     }
+
     .container-play p {
         max-width: 250px;
     }
@@ -1331,9 +1333,11 @@ body#bar {
     .intro-text-box1 {
         font-size: 1.3em;
     }
+
     .footer {
         font-size: 1em;
     }
+
     .pool-text,
     .playground-text,
     .gym-text,
@@ -1353,15 +1357,20 @@ body#bar {
     .container-p p,
     .march-title,
     .playground-title,
-    .container-play p, p.march-p, .why-swim{
+    .container-play p,
+    p.march-p,
+    .why-swim {
         font-size: 1em;
     }
+
     .container-play p {
         max-width: 250px;
     }
-.form-btn {
-    font-size: 1em;
-}
+
+    .form-btn {
+        font-size: 1em;
+    }
+
     table.time-table {
         font-size: 1em;
     }
@@ -1388,13 +1397,15 @@ body#bar {
             "questions"
             "foot";
     }
+
     .p-reason div {
         font-size: 1em;
         border: 1px solid;
     }
+
     .questions h3 {
-    display: block;
-    font-size: 1em;
+        display: block;
+        font-size: 1em;
     }
 
     .p-reason {
@@ -1407,39 +1418,45 @@ body#bar {
         width: 80%;
         border: 25px solid white;
     }
+
     .container-play {
-            background-image: url("../images/pitbull-img.png");
-            width: 100%;
-            height: 100%;
-            position: relative;
-            background-size: contain;
-            background-position: center;
-            background-repeat: no-repeat;
-            grid-area: img1;
-            display: grid;
-            grid-template-columns: 33% auto 32%;
-            grid-template-rows: auto 23% 20%;
-            grid-template-areas:
-                "empty1 photo empty2"
-                "empty3 text empty4"
-                "empty5 empty6 empty7";
+        background-image: url("../images/pitbull-img.png");
+        width: 100%;
+        height: 100%;
+        position: relative;
+        background-size: contain;
+        background-position: center;
+        background-repeat: no-repeat;
+        grid-area: img1;
+        display: grid;
+        grid-template-columns: 33% auto 32%;
+        grid-template-rows: auto 23% 20%;
+        grid-template-areas:
+            "empty1 photo empty2"
+            "empty3 text empty4"
+            "empty5 empty6 empty7";
     }
+
     .gym-container img {
-    margin: 0 auto;
-    display: flex;
-    border-radius: 10%;
-    border: 15px solid white;
-    width: 80%;
+        margin: 0 auto;
+        display: flex;
+        border-radius: 10%;
+        border: 15px solid white;
+        width: 80%;
     }
-    .gym-box, .gym-box1 {
+
+    .gym-box,
+    .gym-box1 {
         font-size: 1rem;
         width: 280px;
         transform: inherit;
         padding: 10px;
     }
+
     .weight img {
         width: 30%;
     }
+
     body#gym {
         display: grid;
         grid-template-columns: 1fr;
@@ -1455,8 +1472,9 @@ body#bar {
             "table"
             "dog"
             "foot";
+    }
 }
-}
+
 @media screen and (min-width: 700px) and (max-width: 900px) {
     body.background {
         display: grid;
@@ -1595,6 +1613,7 @@ body#bar {
     .container-play p {
         font-size: 1.1em;
     }
+
     .container-play {
         grid-template-columns: 15% auto 15%;
     }
@@ -1609,6 +1628,7 @@ body#bar {
         border: 25px solid white;
 
     }
+
     .gym-container img {
         margin: 0 auto;
         display: flex;
@@ -1616,22 +1636,28 @@ body#bar {
         border: 15px solid white;
         width: 80%;
     }
-    .gym-box, .gym-box1 {
+
+    .gym-box,
+    .gym-box1 {
         font-size: 1rem;
         width: 280px;
         transform: inherit;
         padding: 10px;
     }
-body#gym {
-   
+
+    body#gym {
+
         grid-template-rows: auto 180px auto auto;
-}
-.container-play {
-    grid-template-columns: 15% auto 15%;
-}
-.dog-right p, .dog-left p {
-    font-size: 1.4em;
-}
+    }
+
+    .container-play {
+        grid-template-columns: 15% auto 15%;
+    }
+
+    .dog-right p,
+    .dog-left p {
+        font-size: 1.4em;
+    }
 }
 
 @media screen and (min-width: 900px) and (max-width: 980px) {
@@ -1808,9 +1834,11 @@ body#gym {
     .p-reason div {
         font-size: 1em;
     }
+
     div.container-play {
         grid-template-columns: 15% auto 15%;
     }
+
     .gym-container img {
         margin: 0 auto;
         display: flex;
@@ -1818,22 +1846,28 @@ body#gym {
         border: 15px solid white;
         width: 80%;
     }
-    .gym-box, .gym-box1 {
+
+    .gym-box,
+    .gym-box1 {
         font-size: 1rem;
         width: 280px;
         transform: inherit;
         padding: 10px;
     }
-body#gym {
-   
+
+    body#gym {
+
         grid-template-rows: auto 180px auto auto;
-}
-.container-play {
-    grid-template-columns: 15% auto 15%;
-}
-.dog-right p, .dog-left p {
-    font-size: 1.4em;
-}
+    }
+
+    .container-play {
+        grid-template-columns: 15% auto 15%;
+    }
+
+    .dog-right p,
+    .dog-left p {
+        font-size: 1.4em;
+    }
 }
 
 @media screen and (min-width: 980px) and (max-width: 1350px) {
@@ -1899,9 +1933,9 @@ body#gym {
     .staff-c,
     .staff-k,
     .staff-d {
-       
-    font-size: 1.1em;
-    border-radius: 2%;
+
+        font-size: 1.1em;
+        border-radius: 2%;
 
     }
 
@@ -1944,9 +1978,11 @@ body#gym {
     .container-play p {
         font-size: 1.6em;
     }
+
     .container-play {
         grid-template-columns: 15% auto 15%;
     }
+
     .gym-container img {
         margin: 0 auto;
         display: flex;
@@ -1954,24 +1990,30 @@ body#gym {
         border: 15px solid white;
         width: 80%;
     }
-    .gym-box, .gym-box1 {
-        
-            font-size: 1.3rem;
-            width: 280px;
-            transform: inherit;
-            padding: 10px;
+
+    .gym-box,
+    .gym-box1 {
+
+        font-size: 1.3rem;
+        width: 280px;
+        transform: inherit;
+        padding: 10px;
 
     }
-body#gym {
-   
+
+    body#gym {
+
         grid-template-rows: auto 180px auto auto;
-}
-.container-play {
-    grid-template-columns: 15% auto 15%;
-}
-.dog-right p, .dog-left p {
-    font-size: 1.4em;
-}
+    }
+
+    .container-play {
+        grid-template-columns: 15% auto 15%;
+    }
+
+    .dog-right p,
+    .dog-left p {
+        font-size: 1.4em;
+    }
 
 }
 
@@ -1995,13 +2037,15 @@ body#gym {
     div.topnav {
         display: none;
     }
-    
-.container-play {
-    grid-template-columns: 15% auto 15%;
-}
-.dog-right p, .dog-left p {
-    font-size: 1.4em;
-}
+
+    .container-play {
+        grid-template-columns: 15% auto 15%;
+    }
+
+    .dog-right p,
+    .dog-left p {
+        font-size: 1.4em;
+    }
 }
 
 
@@ -2057,8 +2101,8 @@ body#gym {
 @media screen and (min-width: 1350px) and (max-width: 2560px) {
     body#pool-body {
         grid-template-rows: 110px 80px 200px 700px 1200px auto;
-    grid-template-columns: 1fr 1fr;
-}
+        grid-template-columns: 1fr 1fr;
+    }
 
     .form-btn {
         left: 51%;
@@ -2099,16 +2143,18 @@ body#gym {
             "f";
     }
 
-    #name, #inner-pool p {
+    #name,
+    #inner-pool p {
         font-size: 1em;
         margin-right: 20px;
     }
-    
-p.staff-c,
-p.staff-k,
-p.staff-d {
-    margin: 20px;
-}
+
+    p.staff-c,
+    p.staff-k,
+    p.staff-d {
+        margin: 20px;
+    }
+
     #inner-pool {
         grid-area: img4;
     }
@@ -2173,7 +2219,7 @@ p.staff-d {
         height: 250px;
         grid-area: img5;
         margin: 10px auto;
-}
+    }
 }
 
 /* Form media queries*/
