--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,7 @@ li a:hover {
     padding: 3.52px;
 }
 
+
 /* Hamburger menu */
 .topnav {
     overflow: hidden;
@@ -155,7 +156,7 @@ div.topnav {
 
 /* Images and text styling - Home Page */
 .container-1 {
-    background-image: url("../images/amstaff-dog-img.png");
+    background-image: url("../images/amstaff-dog-img.webp");
     width: 100%;
     height: 100%;
     position: relative;
@@ -173,7 +174,7 @@ div.topnav {
 }
 
 .container-2 {
-    background-image: url("../images/bullmastiff-img.png");
+    background-image: url("../images/bullmastiff-img.webp");
     width: 100%;
     height: 100%;
     position: relative;
@@ -238,7 +239,7 @@ div.topnav {
 }
 
 .container-3 {
-    background-image: url("../images/beagle-img.png");
+    background-image: url("../images/beagle-img.webp");
     width: 100%;
     height: 100%;
     position: relative;
@@ -265,7 +266,7 @@ div.topnav {
 }
 
 .container-4 {
-    background-image: url("../images/golden-img.png");
+    background-image: url("../images/golden-img.webp");
     width: 100%;
     height: 100%;
     position: relative;
@@ -363,7 +364,7 @@ p.march-p,
 }
 
 .container-boxer {
-    background-image: url("../images/boxer-img.png");
+    background-image: url("../images/boxer-img.webp");
     width: 100%;
     height: 100%;
     position: relative;
@@ -534,7 +535,7 @@ div.g-pinscher#g-p {
     grid-template-areas:
         "er dog re"
         "em pool me";
-    background-image: url("../images/german-pinscher.png");
+    background-image: url("../images/german-pinscher.webp");
     width: 600px;
     height: 600px;
     background-size: contain;
@@ -717,7 +718,7 @@ body#playground {
 }
 
 .container-play {
-    background-image: url(../images/dogs-img.png);
+    background-image: url(../images/dogs-img.webp);
     width: 100%;
     height: 100%;
     position: relative;
@@ -777,7 +778,7 @@ body#playground {
 
 img.swing {
     grid-area: swing;
-  
+
 }
 
 img.bench {
@@ -959,7 +960,7 @@ body#bar {
 }
 
 .dog-left {
-    background-image: url("../images/rottweiler-img.png");
+    background-image: url("../images/rottweiler-img.webp");
     width: 100%;
     background-size: contain;
     background-position: center;
@@ -979,7 +980,7 @@ body#bar {
 }
 
 .dog-right {
-    background-image: url("../images/pug-img.png");
+    background-image: url("../images/pug-img.webp");
     width: 100%;
     background-size: contain;
     background-position: center;
@@ -1253,7 +1254,7 @@ body#bar {
     }
 
     .container-play {
-        background-image: url("../images/pitbull-img.png");
+        background-image: url("../images/pitbull-img.webp");
         width: 100%;
         height: 100%;
         position: relative;
@@ -1416,7 +1417,7 @@ body#bar {
     }
 
     .container-play {
-        background-image: url("../images/pitbull-img.png");
+        background-image: url("../images/pitbull-img.webp");
         width: 100%;
         height: 100%;
         position: relative;
@@ -2073,7 +2074,7 @@ body#bar {
         grid-template-areas:
             "er dog re"
             "em pool me";
-        background-image: url("../images/german-pinscher.png");
+        background-image: url("../images/german-pinscher.webp");
         width: 600px;
         height: 600px;
         background-size: contain;
