Change form colour

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -644,7 +644,7 @@ input {
 .join-form {
     max-width: 600px;
     width: 100%;
-    background: #DB7F8E;
+    background: #a790a5;
     margin: 20px auto;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.486);
     border-radius: 20px;
